# knowledge-hub

./: .env-example  .gitignore  Dockerfile.scripts  PLAN.md  README.md  docker-compose.yml  notes.md  pyproject.toml
docs/: 2brain.md  2repo-internals.md  2repo.md
graphify/: providers.json
scripts/: 2brain.sh  2repo.sh  builder.py  config.py  main.py  models.py  providers.py  readers.py  repo.py  repo_execution.py  repo_index.py  repo_injection.py  repo_memory.py  repo_wiki.py  utils.py
scripts/brain/: builder.py  readers.py
scripts/repo/: execution.py  index.py  injection.py  memory.py  wiki.py
scripts/shared/: config.py  providers.py  utils.py
vault/: 2026-06-21.md
vault/.obsidian/: graph.json  workspace.json
vault/Guides/: graphify.md  kubernetes-core-concepts.md  langchain-framework-notes.md  llm-platforms.md  llm-vram.md  llm-wiki.md  ollama.md
vault/Inbox/: aws-core-concepts.md  azure-openai-essentials.md  css-essentials.md  graphifyy-knowledge-mapping.md  low-rank-adaptation-guide.md  nestjs-core-patterns.md  typescript-essentials.md
vault/Reference/: ai-agent-workflows.md  backend-as-a-service-essentials.md  bulma-css-essentials.md  container-runtime-comparison.md  css-build-transformation.md  diffusion-model-assistants.md  event-driven-web-architecture.md  firebase-core-overview.md  local-inference-engines.md  low-rank-adaptation.md  microservices-architecture-overview.md  model-quantization.md  nuxt-full-stack-framework.md  ollama.md  open-source-backend-stack.md  postgresql-overview.md  retrieval-augmented-generation.md  (+6 more)
(+1 files in other folders)
